// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OptionInfo /> should render price element 1`] = `
<ul
  className="tss-16b3gbi-info tss-pauvta-root common__grid tss-i2x46h-noWrap"
>
  <GridItem
    aria-hidden={true}
    className="tss-wzlmdo-price"
    component="li"
    grow={1}
    shrink={1}
  >
    Label: 
    <FormatPrice
      className={null}
      currency="EUR"
      fractions={true}
      price={10}
    />
  </GridItem>
  <div
    hidden={true}
    id="some-id"
  >
    price.label
    Some Text
  </div>
</ul>
`;

exports[`<OptionInfo /> should render required element 1`] = `
<ul
  className="tss-16b3gbi-info tss-pauvta-root common__grid tss-i2x46h-noWrap"
>
  <GridItem
    aria-hidden={true}
    className="tss-10mixir-required"
    component="li"
    grow={0}
    shrink={1}
  >
    <Translate
      acceptPlainTextWithPlaceholders={false}
      className={null}
      params={{}}
      role={null}
      string="common.required"
      transform={null}
    />
  </GridItem>
  <div
    hidden={true}
    id="some-id"
  >
    common.required
    Some Text
  </div>
</ul>
`;
